# iothub-medical-demo

./: .gitignore  README.md  iothub.sln
azure-scripts/: phase2-step.sh  setup-functions.sh  setup-msdn.sh  setup-resources.ps1
device-simulator/: CMakeLists.txt  device_simulator.c  device_simulator.py  requirements.txt  run_all_devices.sh
docs/: architecture.md  implementation-plan.md  prd-functions.md
functions-app-csharp/: FunctionsApp.csproj  ProcessTelemetry.cs  Program.cs  README.md  host.json
functions-app-csharp/Properties/: launchSettings.json
logic-app/: README.md
management-app/: CMakeLists.txt  device_manager.c  device_manager.py  requirements.txt
powerbi/: IoT-Medical-Dashboard.pbit  README.md
